--- a/pom.xml
+++ b/pom.xml
@@ -34,12 +34,12 @@
 
 
 
-    <dependencies>
-        <dependency>
-            <groupId>me.tongfei</groupId>
-            <artifactId>progressbar</artifactId>
-            <version>0.9.5</version>
-        </dependency>
-    </dependencies>
+<!--    <dependencies>-->
+<!--        <dependency>-->
+<!--            <groupId>me.tongfei</groupId>-->
+<!--            <artifactId>progressbar</artifactId>-->
+<!--            <version>0.9.5</version>-->
+<!--        </dependency>-->
+<!--    </dependencies>-->
 
 </project>
