Java 1.8 final version Correct output almost - BSF_journal.csv need update

--- a/config.properties
+++ b/config.properties
@@ -1,11 +1,22 @@
+
+#podporovane datasety: gdb, val, egl
+#pro val datasety: datasetGroup=val dataset=val1A
+# val1A, val1B, val1C, val2A, ..., val10D
+
 datasetGroup=egl
+
+#!!! WARNING !!!
+#!!!pri zmene datasetu je potreba nastavit prislusny datasetGroup!!!
 dataset=egl-e1-A
-seed=10
+
+
+seed=1
 N=0.10
-M=70
-k=70
+M=100
+k=100
 maxEpoch=3
 popSize=100
-maxGen=500
+maxGen=200
 tournament=3
 duplicates=3
+resultsDir=experiment
