config altered, introduced separated kTournament, pMutation, pCross, absolute N

--- a/config.properties
+++ b/config.properties
@@ -11,12 +11,15 @@ dataset=egl-e1-A
 
 
 seed=1
-N=0.10
+N=15
 M=100
 k=100
 maxEpoch=3
 popSize=100
-maxGen=200
-tournament=3
-duplicates=3
+maxGen=1000
+duplicates=4
+pMutation=0.5
+pCross=0.9
+tournament1=5
+tournament2=2
 resultsDir=experiment
