Journal False option introduced - no journaling at all, only individual perturbation based on distances egl-large dataset added

--- a/config.properties
+++ b/config.properties
@@ -1,25 +1,29 @@
 
-#podporovane datasety: gdb, val, egl
+#podporovane datasety: gdb, val, egl, egl-large
 #pro val datasety: datasetGroup=val dataset=val1A
 # val1A, val1B, val1C, val2A, ..., val10D
 
-datasetGroup=egl
+#large egl instances: egl-g1-A...E egl-g2-A...E
+
+datasetGroup=egl-large
 
 #!!! WARNING !!!
 #!!!pri zmene datasetu je potreba nastavit prislusny datasetGroup!!!
-dataset=egl-e4-A
+dataset=egl-g1-A
 
-
-seed=0
-N=20
+seed=1
+N=10
 M=100
 k=100
 maxEpoch=3
-popSize=100
+popSize=50
 maxGen=1000
-duplicates=10
+duplicates=1
 pMutation=0.5
 pCross=0.9
-tournament1=5
-tournament2=4
+tournament1=6
+tournament2=14
 resultsDir=experiment
+
+# true/false  -- true pro vypnuti journalování
+populationRestart=false
