popRestart quick fix - epochy funguji tak jak maji zanechava se prvnich N jedincu beze zmeny, permutuje se zbytek

--- a/config.properties
+++ b/config.properties
@@ -5,25 +5,25 @@
 
 #large egl instances: egl-g1-A...E egl-g2-A...E
 
-datasetGroup=egl-large
+datasetGroup=egl
 
 #!!! WARNING !!!
 #!!!pri zmene datasetu je potreba nastavit prislusny datasetGroup!!!
-dataset=egl-g1-A
+dataset=egl-e1-A
 
 seed=1
 N=10
 M=100
 k=100
 maxEpoch=3
-popSize=50
+popSize=100
 maxGen=1000
 duplicates=1
 pMutation=0.5
 pCross=0.9
 tournament1=6
 tournament2=14
-resultsDir=experiment
+resultsDir=journalFalseExp
 
 # true/false  -- true pro vypnuti journalování
-populationRestart=false
+populationRestart=true
