midst major constructor changes

--- a/config.properties
+++ b/config.properties
@@ -13,17 +13,19 @@ dataset=egl-e1-A
 
 seed=1
 N=10
-M=100
-k=100
+M=50
+k=50
 maxEpoch=3
 popSize=100
-maxGen=1000
+maxGen=100
 duplicates=1
 pMutation=0.5
 pCross=0.9
 tournament1=6
-tournament2=14
-resultsDir=journalFalseExp
+tournament2=1
+resultsDir=serializationn
 
-# true/false  -- true pro vypnuti journalování
-populationRestart=true
+#  basic/node/edge
+journalType=edge
+
+
