FINAL version opravený comparator!!! diskuse - v analyzeElement(), kde se do journalu zaznamenává PRŮMĚRNÉ fitness řešení, ve kterých existuje dané spojení hran nastává již omýlaný problém jak zkombinovat informaci o costu a vehicleCount do jedné proměnné -> čili se průměruje jenom cost, což může mít negativní následky, kdy existují řešení s malým costem, ake nadlimitním vehicleCountem. Znamená to, že se mi do průměru dostanou i spojení, která sice vedou na nízký cost, ale tato řešení mohou mít vysoký vehicle count a nebýt přípustná.

--- a/config.properties
+++ b/config.properties
@@ -16,16 +16,19 @@ N=10
 M=50
 k=50
 maxEpoch=3
-popSize=100
-maxGen=100
-duplicates=1
+popSize=50
+maxGen=200
+duplicates=10
 pMutation=0.5
 pCross=0.9
 tournament1=6
 tournament2=1
-resultsDir=serializationn
+resultsDir=testRoutes
 
-#  basic/node/edge
+#  vanilla/basic/node/edge
 journalType=edge
+
+#  true/false  -  u egl-large rad?ji nastavit na false
+serialize=true
 
 
