GRAPHING version 1 - probably abandoned

--- a/config.properties
+++ b/config.properties
@@ -9,26 +9,26 @@ datasetGroup=egl
 
 #!!! WARNING !!!
 #!!!pri zmene datasetu je potreba nastavit prislusny datasetGroup!!!
-dataset=egl-e1-A
+dataset=egl-e3-A
 
-seed=1
+seed=10
 N=10
-M=50
-k=50
+M=100
+k=100
 maxEpoch=3
-popSize=50
-maxGen=200
+popSize=100
+maxGen=1000
 duplicates=10
 pMutation=0.5
 pCross=0.9
 tournament1=6
 tournament2=1
-resultsDir=testRoutes
+resultsDir=eglE3A
 
 #  vanilla/basic/node/edge
 journalType=edge
 
 #  true/false  -  u egl-large rad?ji nastavit na false
-serialize=true
+serialize=false
 
 
