theses added to git + singleExperiment testing

--- a/config.properties
+++ b/config.properties
@@ -1,34 +1,35 @@
-
 #podporovane datasety: gdb, val, egl, egl-large
 #pro val datasety: datasetGroup=val dataset=val1A
 # val1A, val1B, val1C, val2A, ..., val10D
-
 #large egl instances: egl-g1-A...E egl-g2-A...E
 
 datasetGroup=egl
 
 #!!! WARNING !!!
 #!!!pri zmene datasetu je potreba nastavit prislusny datasetGroup!!!
-dataset=egl-e3-A
+dataset=egl-e1-A
 
-seed=10
+seed=1
 N=10
 M=100
-k=100
-maxEpoch=3
-popSize=100
-maxGen=1000
-duplicates=10
-pMutation=0.5
+k=20
+maxEpoch=2
+
+popSize=300
+maxGen=300
+
+duplicates=1
+pMutation=0.2
 pCross=0.9
-tournament1=6
+tournament1=7
 tournament2=1
-resultsDir=eglE3A
+
+resultsDir=singleExpriment
 
 #  vanilla/basic/node/edge
 journalType=edge
 
-#  true/false  -  u egl-large rad?ji nastavit na false
-serialize=false
+#  true/false  -  u egl-large radeji nastavit na false
+serialize=true
 
 
